# DeepResearch-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  streamlit_app.py
benchmarks/: hotpotqa_style.jsonl  researchbench.jsonl
configs/: models.yaml
docs/: agent_concepts_zh.md  interview_notes_zh.md  mimo_api_test.md  mvp_code_walkthrough_zh.md  project_overview_for_me.md  resume_project_summary_zh.md
outputs_dag_check/: demo_trace.json
outputs_linear_check/: demo_report.md  demo_trace.json
scripts/: check_benchmark.py  clean_workspace.py  compare_runs.py  export_eval_report.py  run_benchmark.py  run_demo.py  run_experiment_matrix.py  summarize_results.py  test_mimo_api.py  test_mimo_thinking_controls.py
tests/: test_agent_json_normalization.py  test_agents.py  test_arxiv_provider.py  test_benchmark_loader.py  test_blue_agent.py  test_brave_provider.py  test_citation_validator.py  test_clean_workspace.py  test_compare_runs.py  test_conflict_detector.py  test_conflict_heuristics.py  test_conflict_integration.py  test_conflict_resolver.py  test_context_compression_pipeline.py  test_dag_scheduler.py  test_degradation.py  test_evaluation_runner.py  test_exa_provider.py  test_exporter.py  test_global_timeout.py  test_grounded_research.py  test_json_utils.py  test_judge_fallback.py  test_judge_normalization.py  test_judge_repair_retry.py  test_judge_schema_coercion.py  test_l1_embedding_filter.py  test_l2_textrank_filter.py  test_llm_factory.py  test_memory_dedupe.py  test_memory_integration.py  test_mimo_api_script.py  test_mock_llm.py  (+38 more)
(+86 files in other folders)
