[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepresearch-agent"
version = "0.1.0"
description = "MVP multi-agent deep research workflow with a mock backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch_agent"]
